Focus fixes for language toggle and contrast toggle

--- a/_sass/components/_download_buttons.scss
+++ b/_sass/components/_download_buttons.scss
@@ -73,7 +73,7 @@ body.contrast-high {
       background: $color-highlight-highContrast !important;
     }
     &:focus {
-      background: $color-highlight-highContrast !important;
+      background: $focusBackgroundColor-highContrast !important;
     }
   }
   #zip-download-info {
